--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,8 +1,32 @@
+---
+title: "Peer_Assessment1"
+author: "ram"
+date: "Friday, August 15, 2014"
+output: html_document
+---
+
 # Reproducible Research: Peer Assessment 1
 
 
 ## Loading and preprocessing the data
 
+```{r,echo=TRUE}
+require(data.table,quietly=TRUE)
+#load the raw data
+rawActivityData <- read.csv("./repdata_data_activity/activity.csv",as.is=T)
+
+#turn time intervals into a date and time
+timestamp <- strptime(paste(rawActivityData$date," ",
+                            trunc(rawActivityData$interval/100),":",
+                            rawActivityData$interval %% 100,sep="")
+                      ,"%Y-%m-%d %H:%M")
+
+# sometimes easier to work with a date when summing data tables so have date
+tempdate <- as.Date(rawActivityData$date)
+
+activity.DT <- data.table(date=tempdate,timestamp=timestamp,
+                         steps=rawActivityData$steps)
+```
 
 
 ## What is mean total number of steps taken per day?
