--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -30,16 +30,9 @@ file <- paste(zipdir, files[1], sep="/")
 # Read the file
 rawActivityData <- read.csv(file,as.is=T)
 
-#turn time intervals into a date and time
-timestamp <- strptime(paste(rawActivityData$date," ",
-                            trunc(rawActivityData$interval/100),":",
-                            rawActivityData$interval %% 100,sep="")
-                      ,"%Y-%m-%d %H:%M")
 
-# sometimes easier to work with a date when summing data tables so have date
-tempdate <- as.Date(rawActivityData$date)
-
-activity.df <- data.frame(date=as.Date(rawActivityData$date),timestamp=timestamp,
+activity.df <- data.frame(date=as.Date(rawActivityData$date),
+                          interval=as.ordered(rawActivityData$interval),
                           steps=rawActivityData$steps)
 activityData <- data.table(activity.df)
 ```
@@ -73,10 +66,29 @@ The median number per day is `r as.integer(medianSteps)`.
 
 ## What is the average daily activity pattern?
 
+```{r,echo=TRUE}
+require(ggplot2)
+meanStepsPerInterval = activityData[,mean(steps,na.rm=T),keyby="interval"]
+setnames(meanStepsPerInterval,"V1","meanSteps")
+x <- meanStepsPerInterval$interval
+y <- meanStepsPerInterval$meanSteps
+plot(x=x,y=y,type = "l", col = 1,main="Average Daily Activity Pattern"
+     ,ylab="Mean Steps",xlab="Daily Interval")
+lines(x,y,lwd=2)
+```
+
 ------
 
 ## Imputing missing values
 
+```{r,echo=TRUE}
+
+```
+
 ------
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+```{r,echo=TRUE}
+
+```
