--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -30,9 +30,9 @@ file <- paste(zipdir, files[1], sep="/")
 # Read the file
 rawActivityData <- read.csv(file,as.is=T)
 
-
+# save an original copy for use later
 activity.df <- data.frame(date=as.Date(rawActivityData$date),
-                          interval=as.ordered(rawActivityData$interval),
+                          interval=as.numeric(rawActivityData$interval),
                           steps=rawActivityData$steps)
 activityData <- data.table(activity.df)
 ```
@@ -67,14 +67,13 @@ The median number per day is `r as.integer(medianSteps)`.
 ## What is the average daily activity pattern?
 
 ```{r,echo=TRUE}
-require(ggplot2)
+#calculate the mean for each interval
 meanStepsPerInterval = activityData[,mean(steps,na.rm=T),keyby="interval"]
 setnames(meanStepsPerInterval,"V1","meanSteps")
 x <- meanStepsPerInterval$interval
 y <- meanStepsPerInterval$meanSteps
 plot(x=x,y=y,type = "l", col = 1,main="Average Daily Activity Pattern"
      ,ylab="Mean Steps",xlab="Daily Interval")
-lines(x,y,lwd=2)
 ```
 
 ------
@@ -82,13 +81,66 @@ lines(x,y,lwd=2)
 ## Imputing missing values
 
 ```{r,echo=TRUE}
+totalMissing <- sum(is.na(activityData$steps))
+```
+
+The total missing observations is `r totalMissing`.
+
+```{r,echo=TRUE}
+totalMissing <- sum(is.na(activityData$steps))
+
+# find the missing values
+missing <- which(is.na(activity.df$steps))
+#replace all missing values with the mean from that time interval
+for (i in missing)
+  activity.df$steps[i] <- 
+  meanStepsPerInterval[interval==activity.df$interval[i]]$meanSteps
+
+newActivityData <- data.table(activity.df)
 
 ```
+
+The new activity data table with imputed values has the same form but with no missing values.
+
+```{r,echo=TRUE}
+newActivityData
+
+newTotalStepsPerDay = newActivityData[,sum(steps),keyby="date"]
+setnames(newTotalStepsPerDay,"V1","totalSteps")
+
+hist(newTotalStepsPerDay$totalSteps,breaks=8,
+     main="Total Steps per Day",xlab="Steps")
+
+meanSteps <- mean(newTotalStepsPerDay$totalSteps,na.rm=T)
+
+medianSteps <- median(newTotalStepsPerDay$totalSteps,na.rm=T)
+
+```
+
+The mean number of steps per day is `r as.integer(meanSteps)`.
+
+The median number per day is `r as.integer(medianSteps)`.
+
+The mean and median have not changed appreciably. This makes sense since mean was used to impute missing values. Since the mean and median were essentially the same in the original data, the impact of using the mean to impute values does not alter the distribution, in this case.
 
 ------
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
 ```{r,echo=TRUE}
+require(lattice,quietly=TRUE)
+weekend <- c("Saturday","Sunday")
+newActivityData$dayOfWeek <- weekdays(newActivityData$date)
+newActivityData$weekPeriod <- as.factor(
+  ifelse(newActivityData$dayOfWeek %in% c("Saturday","Sunday"),"Weekend","Weekday"))
+
+meanStepsPerInterval = newActivityData[,mean(steps),keyby="interval,weekPeriod"]
+setnames(meanStepsPerInterval,"V1","steps")
+
+xyplot(steps ~ interval | weekPeriod, data = meanStepsPerInterval, layout = c(1, 2),
+       type="l",ylab="Number of steps",xlab="Interval",
+       scales = list(x = list(at = seq(from = 0, to = 2000, by = 500))))
+
+
 
 ```
